--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>SPEEDCUBING STARS!</h1>
-<img src="chineser-malte.png">
+<img src="chineser-malte.png" height="10%">
 <h2>Updates</h2>
-<p>Hier werden bald Updates angezeigt...</p>
+
 <h2>Danke!</h2>
 <p>Danke für's Spielen!</p>
