--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <h1>SPEEDCUBING STARS!</h1>
-<img src="chineser-malte.png" height="10%">
+<img src="chineser-malte.png" height="25%">
 <h2>Updates</h2>
-
+<b>Update 1: Sigma Brawl!</b>
+<p>Was hinzugefügt wurde:</p>
+<ul>
+        <li>Neue Megabox-Belohnungen</li>
+        <li>Megabox-Pakete im Shop</li>
+        <li>Neue Profil-Icons!</li>
+        <li>und mehr!</li>
+    </ul>
 <h2>Danke!</h2>
 <p>Danke für's Spielen!</p>
